# GitAutoCommitTool

./: .gitignore  CLAUDE.md  GitAutoCommit.spec  README.md  config.example.json  config.json  pyproject.toml  run.py  run_gui.py
.claude/: settings.local.json
git_auto_commit/: __main__.py  cli.py  config.py  daemon.py  git_ops.py  gui.py  logger.py  models.py  web.py
git_auto_commit/static/: index.html
